--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,12 @@
-<h1>Help page</h1>
-<p>Help on this page</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Ruby on Rails Tutorial Sample App | Help</title>
+  </head>
+  <body>
+    <h1>Help</h1>
+    <p>
+		Help on this page
+    </p>
+  </body>
+</html>
