--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Sample App#home</h1>
-<p>This is first static page(home)</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Ruby on Rails Tutorial Sample App | Home</title>
+  </head>
+  <body>
+    <h1>Sample App</h1>
+    <p>
+      This is static page
+      for smple app from 
+      rails tutoial.
+    </p>
+  </body>
+</html>
