Использование лэйаут. Рефакторинг представлений.

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Ruby on Rails Tutorial Sample App | Help</title>
-  </head>
-  <body>
+<% provide(:title, 'Help') %>
     <h1>Help</h1>
     <p>
 		Help on this page
     </p>
-  </body>
-</html>
