--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Ruby on Rails Tutorial Sample App | Home</title>
-  </head>
-  <body>
+<% provide(:title, 'Home') %>
     <h1>Sample App</h1>
     <p>
       This is static page
       for smple app from 
       rails tutoial.
     </p>
-  </body>
-</html>
+
