--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Ruby on Rails Tutorial Sample App | About Us</title>
-  </head>
-  <body>
+<% provide(:title, 'About Us') %>
     <h1>About Us</h1>
     <p>
 		Exercise app from 
 		ruby tutorials 
 		writed by <a href="https://github.com/NightingaleGit">Me</a>
     </p>
-  </body>
-</html>
